--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Instamart</string>
-    <string name="greeting_text">Hello,World!</string>
     <string name="login_title">Welcome Back</string>
     <string name="login_subtitle">Sign in to continue</string>
     <string name="email_hint">Email</string>
@@ -9,4 +8,8 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="signup_prompt">Don\'t have an account?</string>
     <string name="signup_action">Sign Up</string>
+    <string name="nav_login_button">Login</string>
+    <string name="social_login_label">Or login with</string>
+    <string name="btn_google">Google</string>
+    <string name="btn_facebook">Facebook</string>
 </resources>
