--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="social_login_label">Or login with</string>
     <string name="btn_google">Google</string>
     <string name="btn_facebook">Facebook</string>
+    <string name="error_enter_email_password">Please enter email and password</string>
+    <string name="msg_login_clicked">Login clicked</string>
+    <string name="msg_forgot_password_clicked">Forgot Password clicked</string>
+    <string name="msg_google_login_clicked">Google Login clicked</string>
+    <string name="msg_facebook_login_clicked">Facebook Login clicked</string>
+    <string name="msg_navigate_signup">Navigate to Signup</string>
+    <string name="greeting_text">Hello World!</string>
 </resources>
